--- a/AlbumPage.xaml
+++ b/AlbumPage.xaml
@@ -1,38 +1,29 @@
-﻿<Page
-    x:Class="MyPhotoLibraryApp_practice_.AlbumPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MyPhotoLibraryApp_practice_"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:model="using:MyPhotoLibraryApp_practice_.Model"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+using MyPhotoLibraryApp_practice_.Model;
+using System;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.IO;
+using System.Linq;
+using System.Runtime.InteropServices.WindowsRuntime;
+using Windows.Foundation;
+using Windows.Foundation.Collections;
+using Windows.UI.Xaml;
+using Windows.UI.Xaml.Controls;
+using Windows.UI.Xaml.Controls.Primitives;
+using Windows.UI.Xaml.Data;
+using Windows.UI.Xaml.Input;
+using Windows.UI.Xaml.Media;
+using Windows.UI.Xaml.Navigation;
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <RelativePanel Grid.Row="0"
-                       Name="TitlePanel"
-                       Background="DarkGray"
-                       HorizontalAlignment="Center"
-                       Width="1300">
-            <TextBlock Name="TitleTextBlock" 
-                FontSize="50"
-                       RelativePanel.AlignHorizontalCenterWithPanel="True" 
-                       FontFamily="Verdana"
-                       FontWeight="ExtraBlack"> 
-                Add To An Album</TextBlock>
-        </RelativePanel>
-        <Button Grid.Row="0"
-                Name="BackButton"
-                Height="60"
-                Width="100"
-                Content="Back"
-                FontSize="25"
-                IsEnabled="True"
-                Click="BackButton_Click"/>
-    </Grid>
-</Page>
+
+namespace MyPhotoLibraryApp_practice_
+{
+    public sealed partial class AlbumPage : Page
+    {
+        public AlbumPage()
+        {
+            this.InitializeComponent();
+        }
+
+    }
+}
