--- a/BudgetMobileApp/BudgetMobileApp/BudgetEditor.xaml
+++ b/BudgetMobileApp/BudgetMobileApp/BudgetEditor.xaml
@@ -1,22 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:model="clr-namespace:BudgetMobileApp.Model"
              x:Class="BudgetMobileApp.BudgetEditor">
     <ContentPage.Content>
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <StackLayout Orientation="Horizontal"
-                         Grid.Row="1">
-                <Entry x:Name="BudgetEntry" 
-                Placeholder="Enter Your New Monthly Budget"
-                   />
-                <Button Text="Enter"
-                    HeightRequest="20"
-                    />
-            </StackLayout>
+            <ListView x:Name="ExpenseView"
+                      IsGroupingEnabled="True"
+                      GroupDisplayBinding="{Binding }">
+                <ListView.ItemTemplate>
+                    <DataTemplate x:DataType="model: Expense">
+                        <ViewCell>
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    
+                                </Grid.RowDefinitions>
+                            </Grid>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
